agregando endpoints
